--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "create:migration": "sequelize migration:create --name=",
+    "db:migrate": "sequelize db:migrate"
   },
   "dependencies": {
     "express": "^4.17.1",
